Ignore Twig templates that start with underscore
Modified the gulpfile to use twigAll src for the twig task and ignore any twig file that starts with an underscore. Also modified default template src files:

* Renamed layouts/default.twig to _default.twig
* Renamed partials/header.twig to _header.twig
* Renamed partials/scripts.twig to _scripts.twig

Also updated broken paths to partials and layouts in default src template files.

--- a/src/index.twig
+++ b/src/index.twig
@@ -1,4 +1,4 @@
-{% extends './layouts/default.twig' %}
+{% extends './layouts/_default.twig' %}
 
 {% set title     = 'Welcome' %}
 {% set home      = 'true'    %}
