--- a/src/layouts/_default.twig
+++ b/src/layouts/_default.twig
@@ -15,12 +15,12 @@
 
 	<body id="{{ id }}" data-page="{{ data_page }}">
 
-		{% include '../partials/header.twig' %}
+		{% include '../partials/_header.twig' %}
 
 		{% block body %}
 		{% endblock %}
 
-		{% include '../partials/scripts.twig' %}
+		{% include '../partials/_scripts.twig' %}
 
 	</body>
 </html>
