Revert "Ignore Twig templates that start with underscore"
This reverts commit bfd4e0a9d77175a537e0da99eaafff081f5e8f19.

--- a/src/index.twig
+++ b/src/index.twig
@@ -1,4 +1,4 @@
-{% extends './layouts/_default.twig' %}
+{% extends './layouts/default.twig' %}
 
 {% set title     = 'Welcome' %}
 {% set home      = 'true'    %}
