Update screen.scss to use globs

--- a/src/assets/scss/screen.scss
+++ b/src/assets/scss/screen.scss
@@ -6,8 +6,7 @@
 
 
 /* modules */
-@import 'modules/header';
-@import 'modules/footer';
+@import 'modules/**/*';
 
 /* pages */
-@import 'pages/homepage';
+@import 'pages/**/*';
